把模型依赖注入

--- a/SmartMES_Apis/appsettings.json
+++ b/SmartMES_Apis/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DB_DEV": "Server=192.168.0.26;Database=SMART_MES;UID=sa;Pwd=1234;"
+  },
   "AllowedHosts": "*"
 }
