--- a/SmartMES_Apis/appsettings.json
+++ b/SmartMES_Apis/appsettings.json
@@ -5,7 +5,7 @@
     }
   },
   "ConnectionStrings": {
-    "DB_DEV": "Server=192.168.1.23;Database=SMART_MES;UID=sa;Pwd=1234;"
+    "DB_DEV": "Server=192.168.1.57;Database=SMART_MES;UID=sa;Pwd=Sa123456;"
   },
   "AllowedHosts": "*"
 }
